@@ -37,8 +37,6 @@ COM_PODCASTMANAGER_CONFIG_FIELD_LINKHANDLING_OPTION_LINK="Link"
 COM_PODCASTMANAGER_CONFIG_FIELD_LINKHANDLING_OPTION_PLAYER="Media Player"
 COM_PODCASTMANAGER_CONFIG_FIELD_LINKTITLE_DESCRIPTION="Use this title for links to podcasts in content items."
 COM_PODCASTMANAGER_CONFIG_FIELD_LINKTITLE_LABEL="Enclosure Link Title"
-COM_PODCASTMANAGER_CONFIG_FIELD_MIMETYPE_DESCRIPTION="The default MIME type to use for the podcast."
-COM_PODCASTMANAGER_CONFIG_FIELD_MIMETYPE_LABEL="MIME Type"
 COM_PODCASTMANAGER_CONFIG_FIELD_PLAYERHEIGHT_DESCRIPTION="The height to use for the media player when playing audio files. You should leave this blank unless you need to adjust the player."
 COM_PODCASTMANAGER_CONFIG_FIELD_PLAYERHEIGHT_LABEL="Audio Player Height"
 COM_PODCASTMANAGER_CONFIG_FIELD_PLAYERWIDTH_DESCRIPTION="The width to use for the media player for all files. You should leave this blank unless you need to adjust the player."
@@ -98,6 +96,8 @@ COM_PODCASTMANAGER_FIELD_ITSUBTITLE_LABEL="Subtitle"
 COM_PODCASTMANAGER_FIELD_ITSUMMARY_DESCRIPTION="A summary of the podcast episode."
 COM_PODCASTMANAGER_FIELD_ITSUMMARY_LABEL="Summary"
 COM_PODCASTMANAGER_FIELD_LANGUAGE_DESCRIPTION="The language the podcast episode is in."
+COM_PODCASTMANAGER_FIELD_MIMETYPE_DESCRIPTION="The MIME type for the media file."
+COM_PODCASTMANAGER_FIELD_MIMETYPE_LABEL="MIME Type"
 COM_PODCASTMANAGER_FIELD_MODIFIED_DESCRIPTION="The date and time that the podcast was last modified."
 COM_PODCASTMANAGER_FIELD_PUBLISH_UP_DESCRIPTION="The date to start publishing the podcast."
 COM_PODCASTMANAGER_FIELD_PUBLISH_UP_LABEL="Start Publishing"
