@@ -80,6 +80,9 @@
 		<field name="itSummary" type="textarea" filter="safehtml"
 			rows="3" cols="40"
 			label="COM_PODCASTMANAGER_FIELD_ITSUMMARY_LABEL" description="COM_PODCASTMANAGER_FIELD_ITSUMMARY_DESCRIPTION" />
+		<field name="mime" type="text" class="inputbox"
+			label="COM_PODCASTMANAGER_FIELD_MIMETYPE_LABEL" description="COM_PODCASTMANAGER_FIELD_MIMETYPE_DESCRIPTION"
+			size="30" default="audio/mpeg" />
 		<field name="language" type="contentlanguage" label="JFIELD_LANGUAGE_LABEL"
 			description="COM_PODCASTMANAGER_FIELD_LANGUAGE_DESCRIPTION" class="inputbox">
 			<option value="*">JALL</option>
