@@ -45,6 +45,8 @@ COM_PODCASTMANAGER_FIELD_ITSUBTITLE_LABEL="Subtitle"
 COM_PODCASTMANAGER_FIELD_ITSUMMARY_DESCRIPTION="A summary of the podcast episode."
 COM_PODCASTMANAGER_FIELD_ITSUMMARY_LABEL="Summary"
 COM_PODCASTMANAGER_FIELD_LANGUAGE_DESCRIPTION="The language the podcast episode is in."
+COM_PODCASTMANAGER_FIELD_MIMETYPE_DESCRIPTION="The MIME type for the media file."
+COM_PODCASTMANAGER_FIELD_MIMETYPE_LABEL="MIME Type"
 COM_PODCASTMANAGER_FIELD_MODIFIED_DESCRIPTION="The date and time that the podcast was last modified."
 COM_PODCASTMANAGER_FIELD_MODIFIED_LABEL="Modified"
 COM_PODCASTMANAGER_FIELD_MODIFIED_BY_LABEL="Modified By"
