@@ -260,8 +260,18 @@ class PodcastManagerViewFeed extends JView
 				$xw->writeAttribute('url', $filename);
 				$xw->writeAttribute('length', filesize($filepath));
 
-				// TODO: Push file through getID3 to extract proper MIME type
-				$xw->writeAttribute('type', $params->get('mimetype', 'audio/mpeg'));
+				// Set the MIME type
+				if (strlen($item->mime) >= 3)
+				{
+					$mime = $item->mime;
+				}
+				// Default if not set
+				else
+				{
+					$mime = 'audio/mpeg';
+				}
+
+				$xw->writeAttribute('type', $mime);
 				$xw->endElement();
 
 				$xw->writeElement('guid', $filename);
